fix: errors "was not wrapped in act(...)"
The underyling issue was a misuse of `react-tooltip`:
Instead of instantiating one `react.Tooltip`-component per tooltip to be
displayed, there should an always-rendered component while the content
to display is supplied via `data-` attributes on the components itself.

`react-tooltip` seems to do some "magic" DOM manipulations under the
hood which causes warnings when executing tests.

On the plus side, accoring to `react-tooltip`'s documentaiton this
should also increase performance, though I cannot confirm this from
running on dev environments.

Rev: SRX-CXV1V1

--- a/services/frontend-service/src/ui/components/tooltip/tooltip.scss
+++ b/services/frontend-service/src/ui/components/tooltip/tooltip.scss
@@ -15,22 +15,17 @@ along with kuberpult. If not, see <https://directory.fsf.org/wiki/License:Expat>
 Copyright 2023 freiheit.com*/
 @use '../../../../node_modules/@material/tooltip/styles';
 
-.tooltip-container {
-    a {
-        text-decoration: none;
-    }
-    .tooltip {
-        z-index: 1000;
-        background-color: white;
-        color: black;
-        font-size: 14px;
-        border-radius: 8px;
-        .release__hash--container {
-            padding: 2px 0px 0px 0px;
+#kuberpult-tooltip {
+    z-index: 1000;
+    background-color: white;
+    color: black;
+    font-size: 14px;
+    border-radius: 8px;
+    .release__hash--container {
+        padding: 2px 0px 0px 0px;
 
-            .release__hash {
-                padding: 0;
-            }
+        .release__hash {
+            padding: 0;
         }
     }
 }
